--- a/styles.scss
+++ b/styles.scss
@@ -4,9 +4,14 @@
   box-sizing: border-box;
 }
 
+h1 {
+  text-align: center;
+}
+
 .board {
   max-width: 302px;
   border: 1px solid #444;
+  margin: 0 auto;
 }
 
 .row {
