--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,2 @@
-*,:after,:before{box-sizing:border-box}h1{text-align:center}.board{max-width:302px;border:1px solid #444;margin:0 auto}.row{overflow:hidden}.box{width:100px;height:100px;border:1px solid #444;float:left}
+*,:after,:before{box-sizing:border-box}h1{text-align:center}.player{margin:1em 0;text-align:center}.player span{font-size:2em;padding:0.2em 0.5em;margin:0.5em}.goes{background-color:lightblue}.board{max-width:302px;border:1px solid #444;margin:0 auto}.row{overflow:hidden}.box{width:100px;height:100px;border:1px solid #444;float:left}
 /*# sourceMappingURL=styles.css.map */
