--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
   text-align: center;
 }
@@ -17,9 +21,11 @@ h1 {
     margin: 0.5em;
   }
 }
+
 .goes {
   background-color: lightblue;
 }
+
 
 .board {
   max-width: 302px;
@@ -36,4 +42,12 @@ h1 {
   height: 100px;
   border: 1px solid #444;
   float: left;
+}
+
+.marked {
+  background-color: grey;
+  &:before {
+    content: "x";
+    font-size: 100px;
+  }
 }
