--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,17 +6,20 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-h1 {
-  text-align: center;
+  background: url('https://static.pexels.com/photos/2286/restaurant-people-alcohol-bar.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .player {
-  margin: 1em 0;
+  margin: 1em auto;
   text-align: center;
+  font-weight: bold;
+  font-size: 2em;
+  background-color: rgba(200,200,200,0.7);
+  padding: 1em;
+  width: 60%;
   span {
-    font-size: 2em;
     padding: 0.2em 0.5em;
     margin: 0.5em;
   }
@@ -24,6 +27,11 @@ h1 {
 
 .goes {
   background-color: lightblue;
+    &:before {
+      font-family: "FontAwesome";
+      content: "\f0a4";
+      margin-right: 0.2em;
+    }
 }
 
 
@@ -41,9 +49,12 @@ h1 {
   width: 100px;
   height: 100px;
   border: 1px solid #444;
+  background-color: #fff;
   float: left;
-  font-size: 100px;
+  font-size: 80px;
+  line-height: 100px;
   text-align: center;
+  font-family: "FontAwesome";
 }
 
 .marked {
